# mitochontrol

./: .gitignore  GO_Biological_Process_2021.gmt  LICENSE  MitoChontrol_tut.ipynb  README.md  mitochontrol.yml  pyproject.toml  sc_preprocessing.yml  sc_preprocessing_n.r
.github/workflows/: workflow.yml
mitochontrol/: __init__.py  clustering.py  core.py  enrichment.py  models.py  pipelines.py  thresholding.py  visualization.py
tests/: conftest.py  test_clustering.py  test_core.py  test_import.py  test_models.py  test_pipelines.py
