[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mitochontrol"
version = "0.1.0"
description = "Adaptive mitochondrial filtering for robust single-cell RNA sequencing quality control"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Strassburg", email = "cms496@pitt.edu"},
]
keywords = [
    "single-cell",
    "scRNA-seq",
    "mitochondrial RNA",
    "quality control",
    "thresholding",
    "clustering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.9",
    "gseapy>=1.0",
    "matplotlib>=3.5",
    "numpy>=1.22",
    "pandas>=1.4",
    "python-igraph<0.12",
    "scanpy>=1.9",
    "scikit-learn>=1.1",
    "scipy>=1.8",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/uttamLab/mitochontrol"
Documentation = "https://github.com/uttamLab/mitochontrol#readme"
Issues = "https://github.com/uttamLab/mitochontrol/issues"

[tool.setuptools.packages.find]
include = ["mitochontrol*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
