[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mitochontrol"
version = "0.1.0"
description = "Adaptive mitochondrial filtering for robust single-cell RNA sequencing quality control"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Strassburg", email = "cms496@pitt.edu"},
]
keywords = [
    "single-cell",
    "scRNA-seq",
    "mitochondrial RNA",
    "quality control",
    "thresholding",
    "clustering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "python >=3.10,<3.13",
    "pip",
    "ipykernel",
    "numpy >=1.26,<2",
    "scipy >=1.14,<1.15",
    "pandas >=2.2,<2.3",
    "matplotlib >=3.9,<3.10",
    "seaborn >=0.13,<0.14",
    "scikit-learn >=1.5,<1.6",
    "anndata >=0.10,<0.11",
    "scanpy >=1.10,<1.11",
    "python-igraph >=0.11,<0.12",
    "leidenalg",
    "umap-learn",
    "gseapy >=1.1,<1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/uttamLab/mitochontrol"
Documentation = "https://github.com/uttamLab/mitochontrol#readme"
Issues = "https://github.com/uttamLab/mitochontrol/issues"

[tool.setuptools.packages.find]
include = ["mitochontrol*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
